--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,11 +17,12 @@ import '../styles/global.css';
 	</body>
 </html>
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
+<style is:global>
+  html,
+  body {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+  }
 </style>
