--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,10 +8,9 @@ import '../styles/global.css';
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/png" sizes="32x32" href="/logcomply.png" />
-		<link rel="icon" type="image/svg+xml" sizes="32x32" href="/logcomply32.svg" />
+		<link rel="icon" type="image/png" href="/favicon.png" />
 		<meta name="generator" content={Astro.generator} />
-		<title>LogComply - Sua jornada em conformidade começa aqui.</title>
+		<title>Vektor Aero</title>
 	</head>
 	<body>
 		<slot />
